--- a/src/main/resources/view/PersonEditDialog.fxml
+++ b/src/main/resources/view/PersonEditDialog.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="250.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hbvhuwe.address.view.PersonEditDialogController">
+<AnchorPane prefHeight="250.0" prefWidth="400.0" stylesheets="@../styles/light-theme.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hbvhuwe.address.view.PersonEditDialogController">
    <children>
       <GridPane AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="16.0">
         <columnConstraints>
@@ -59,39 +59,39 @@
                   <Insets bottom="4.0" left="8.0" right="8.0" top="4.0" />
                </GridPane.margin>
             </TextField>
-            <Label text="First Name">
+            <Label alignment="CENTER_RIGHT" prefHeight="16.0" prefWidth="110.0" text="First Name">
                <GridPane.margin>
                   <Insets bottom="4.0" left="8.0" top="4.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Last Name" GridPane.rowIndex="1">
+            <Label alignment="CENTER_RIGHT" prefHeight="16.0" prefWidth="110.0" text="Last Name" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="4.0" left="8.0" top="4.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Street" GridPane.rowIndex="2">
+            <Label alignment="CENTER_RIGHT" prefHeight="16.0" prefWidth="110.0" text="Street" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="4.0" left="8.0" top="4.0" />
                </GridPane.margin>
             </Label>
-            <Label text="City" GridPane.rowIndex="3">
+            <Label alignment="CENTER_RIGHT" prefHeight="16.0" prefWidth="110.0" text="City" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="4.0" left="8.0" top="4.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Postal Code" GridPane.rowIndex="4">
+            <Label alignment="CENTER_RIGHT" prefHeight="16.0" prefWidth="110.0" text="Postal Code" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets bottom="4.0" left="8.0" top="4.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Birthday" GridPane.rowIndex="5">
+            <Label alignment="CENTER_RIGHT" prefHeight="16.0" prefWidth="110.0" text="Birthday" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets bottom="4.0" left="8.0" top="4.0" />
                </GridPane.margin>
             </Label>
          </children>
       </GridPane>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="16.0" AnchorPane.rightAnchor="24.0">
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="24.0" AnchorPane.rightAnchor="24.0">
         <buttons>
           <Button mnemonicParsing="false" onAction="#handleOk" text="Ok" />
             <Button mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
