--- a/src/main/resources/view/RootLayout.fxml
+++ b/src/main/resources/view/RootLayout.fxml
@@ -5,13 +5,17 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../styles/light-theme.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../styles/light-theme.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hbvhuwe.address.view.RootLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" text="New" onAction="#handleNew"/>
+              <MenuItem mnemonicParsing="false" text="Open..." onAction="#handleOpen"/>
+              <MenuItem mnemonicParsing="false" text="Save" onAction="#handleSave"/>
+              <MenuItem mnemonicParsing="false" text="Save As.." onAction="#handleSaveAs"/>
+              <MenuItem mnemonicParsing="false" text="Exit" onAction="#handleExit"/>
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
@@ -21,7 +25,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" text="About" onAction="#handleAbout"/>
             </items>
           </Menu>
         </menus>
